add contact back

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,8 +1,8 @@
 .fa {
-  font-size: 3em;
+  font-size: 6rem;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
   margin: 0 0.5em 0 0.5em;
-  color: ivory;
+  color: #444444;
 }
