--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="offset-3 col-6 mb-5 text-center">
-      <span style="font-size: 96px; color: #444444;">Stay in touch with me</span>
+      <span style="font-size: 6.4rem; color: #444444;">Stay in touch with me</span>
     </div>
     <div class="col-12"></div>
     <div class="offset-3 col-6 justify-content-center d-flex">
