emphasis using tags

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
             <span style="font-size: 36px; color: #444444;">Documenting my journey as a young developer without a degree.
                 Confident in my craft with skills that speak for themselves.
                 Mentoring soon-to-be devs and instilling work ethic.
-                I <span style="font-weight: bold;"> want </span>you to know that I’m thatdevsherry</span>
+                I <b> want </b>you to know that I’m <b>thatdevsherry</b></span>
         </div>
         <div class="offset-1 col-3">
             <img src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
