--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,7 +1,13 @@
 <div class="container-fluid w-100">
     <div class="row h-100 align-items-center">
-        <!-- TODO(Shehriyar): Try using nested column, outer column centered, inner for alignment -->
-        <div class="offset-1 col-md-10">
+        <div class="col-sm-12 d-sm-none">
+            <span class="salutation">Hey,</span>
+            <div class="text-right">
+                <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
+                        Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
+            </div>
+        </div>
+        <div class="offset-1 col-md-10 d-none d-md-block">
             <span class="salutation">Hey,</span>
             <div class="text-md-right text-sm-left">
                 <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
