--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,10 +6,10 @@
         <div class="col-12 mb-3">
             <app-about></app-about>
         </div>
-        <div class="col-12 mb-3">
+        <div class="col-12" style="margin: 10rem 0 10rem 0;">
             <app-companies-worked></app-companies-worked>
         </div>
-        <div class="col-12 nopadding mt-5 mb-5">
+        <div class="col-12 nopadding" style="margin-bottom: 5rem;">
             <app-contact></app-contact>
         </div>
         <div class="col-12 nopadding mt-3">
