--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="offset-1 col-10 text-center name-heading mb-5">
-            <span style="font-size: 144px; color: #444444;">Shehriyar Qureshi</span>
+        <div class="offset-1 col-10 text-center mb-5">
+            <span class="name-heading">Shehriyar Qureshi</span>
         </div>
-        <div class="offset-1 col-6 align-self-center">
-            <span style="font-size: 36px; color: #444444;">Documenting my journey as a young developer without a degree.
+        <div class="offset-1 col-md-6 col-sm-12 align-self-center order-2">
+            <span class="intro-text">Documenting my journey as a young developer without a degree.
                 Confident in my craft with skills that speak for themselves.
                 Mentoring soon-to-be devs and instilling work ethic.
                 I <b> want </b>you to know that I’m <b>thatdevsherry</b></span>
         </div>
-        <div class="offset-1 col-3">
+        <div class="offset-md-1 col-md-3 offset-3 col-6 order-1 mb-3">
             <img src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
         </div>
     </div>
