--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,16 @@
 .name-heading {
     font-family: 'Quicksand', sans-serif;
+    font-size: 144px;
+    color: #444444;
+    @media screen and (max-width: 500px) {
+        font-size: 6.0rem;
+    }
+}
+
+.intro-text {
+    font-size: 3.6rem;
+    color: #444444;
+    @media screen and (max-width: 500px) {
+        font-size: 1.6rem;
+    }
 }
