--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,13 +1,20 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="offset-3 col-6 mb-5 text-center">
-      <span style="font-size: 6.4rem; color: #444444;">Stay in touch with me</span>
+    <div class="offset-md-3 col-md-6 col-sm-12 mb-5 text-center">
+      <span class="heading">Stay in touch with me</span>
     </div>
     <div class="col-12"></div>
-    <div class="offset-3 col-6 justify-content-center d-flex">
-      <div class="col" *ngFor="let social of socials">
-        <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+    <div class="offset-md-3 col-md-6 offset-1 col-10 text-center">
+      <div class="row">
+        <div class="col-md-3 col-4 mt-5 mb-5" *ngFor="let social of socials">
+          <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+        </div>
       </div>
     </div>
+    <!-- <div class="offset-md-3 col-md-6 col-sm-12 justify-content-center d-flex">
+      <div class="col-sm-6" *ngFor="let social of socials">
+        <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+      </div>
+    </div> -->
   </div>
 </div>
