update company logos use .png logos with alpha channels

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,6 +10,6 @@
                 I <b> want </b>you to know that I’m <b>thatdevsherry</b></span>
         </div>
         <div class="offset-md-1 col-md-3 offset-3 col-6 order-1 mb-3">
-            <img src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
+            <img id="profile-picture" src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
         </div>
     </div>
