make it friendly for tablet view

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="offset-md-3 col-md-6 col-sm-12 mb-5 text-center">
+    <div class="col-md-12 col-sm-12 mb-5 text-center">
       <span class="heading">Stay in touch with me</span>
     </div>
     <div class="col-12"></div>
@@ -11,10 +11,5 @@
         </div>
       </div>
     </div>
-    <!-- <div class="offset-md-3 col-md-6 col-sm-12 justify-content-center d-flex">
-      <div class="col-sm-6" *ngFor="let social of socials">
-        <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
-      </div>
-    </div> -->
   </div>
 </div>
