--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
                 Mentoring soon-to-be devs and instilling work ethic.
                 I <b> want </b>you to know that I’m <b>thatdevsherry</b></span>
         </div>
-        <div class="offset-md-1 col-md-3 offset-3 col-6 order-1 mb-3">
+        <div class="offset-md-1 col-md-3 offset-3 col-6 order-1 mb-3 align-self-center">
             <img id="profile-picture" src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
         </div>
     </div>
