--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,9 +1,12 @@
 .name-heading {
     font-family: 'Quicksand', sans-serif;
-    font-size: 144px;
+    font-size: 14.4rem;
     color: #444444;
     @media screen and (max-width: 500px) {
-        font-size: 6.0rem;
+        font-size: 6rem;
+    }
+    @media screen and (min-width: 500px) and (max-width: 1024px) {
+        font-size: 8rem;
     }
 }
 
@@ -12,6 +15,9 @@
     color: #444444;
     @media screen and (max-width: 500px) {
         font-size: 1.6rem;
+    }
+    @media screen and (min-width: 500px) and (max-width: 1024px) {
+        font-size: 2.6rem;
     }
 }
 
