--- a/src/app/components/companies-worked/companies-worked.component.scss
+++ b/src/app/components/companies-worked/companies-worked.component.scss
@@ -4,4 +4,7 @@
     @media screen and (max-width: 500px) {
         font-size: 3rem;
     }
+    @media screen and (max-width: 1024px) and (min-width: 500px) {
+        font-size: 5rem;
+    }
 }
