--- a/src/app/components/companies-worked/companies-worked.component.html
+++ b/src/app/components/companies-worked/companies-worked.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 text-center mb-3">
             <span class="heading">Companies I've worked with</span>
         </div>
-        <div class="offset-lg-0 col-lg-2 col-4 text-center mt-3 mb-3 align-self-center" *ngFor="let item of workService.workExperience">
+        <div class="offset-lg-0 col-lg-2 col-4 text-center mt-3 mb-3 align-self-center p-3" *ngFor="let item of workService.workExperience">
             <img src="{{ item.logo }}" alt="" class="img-fluid">
         </div>
     </div>
