--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,21 +1,21 @@
-.heading {
-  font-size: 6.4rem;
-  color: #444444;
+.text {
+    font-size: 2.0rem;
+    color: #444444;
     @media screen and (max-width: 500px) {
-        font-size: 3rem;
+        font-size: 1.6rem;
     }
     @media screen and (max-width: 1024px) and (min-width: 500px) {
-        font-size: 5rem;
+        font-size: 1.6rem;
     }
 }
 
 .fa {
-  font-size: 6rem;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  margin: 0 0.5em 0 0.5em;
-  color: #444444;
+    font-size: 6rem;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin: 0 0.5em 0 0.5em;
+    color: #444444;
     @media screen and (max-width: 500px) {
         font-size: 3rem;
     }
