use consistent font for paragraph text

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
             <span class="name-heading">Shehriyar Qureshi</span>
         </div>
         <div class="offset-1 col-md-6 col-sm-12 align-self-center order-2">
-            <span class="intro-text">Documenting my journey as a young developer without a degree.
+            <span class="normal-text">Documenting my journey as a young developer without a degree.
                 Confident in my craft with skills that speak for themselves.
                 Mentoring soon-to-be devs and instilling work ethic.
                 I <b> want </b>you to know that I’m <b>thatdevsherry</b></span>
