--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,7 +6,7 @@
           <span class="heading">Want to work with me?</span>
         </div>
         <div class="col-12 col-md-8 mb-2 align-self-center">
-          <span class="text">Hit me up on social media or checkout my Fiverr Gigs</span>
+          <span class="normal-text">Hit me up on social media or checkout my Fiverr Gigs</span>
         </div>
         <div class="col-12 col-md-4 align-self-center">
           <div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget'
