--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,14 @@ button {
     }
     font-weight: bold;
 }
+
+.normal-text {
+    font-size: 2.4rem;
+    color: #444444;
+    @media screen and (max-width: 500px) {
+        font-size: 1.6rem;
+    }
+    @media screen and (min-width: 500px) and (max-width: 1024px) {
+        font-size: 2.0rem;
+    }
+}
