--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,9 @@
 .container-fluid {
     background-color: #65856E;
 }
+
+.text {
+    font-family: 'Pacifico', cursive;
+    color: #f8f8fa;
+    font-size: 3rem;
+}
