--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,18 +1,20 @@
-<div class="container-fluid w-100">
-    <div class="row h-100 align-items-center">
-        <div class="col-sm-12 d-sm-none">
-            <span class="salutation">Hey,</span>
-            <div class="text-right">
-                <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
-                        Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
+<section class="hero vw-100 vh-100 d-flex justify-content-center align-items-center">
+    <div class="container-fluid">
+        <div class="row h-100 align-items-center mt-5 mt-md-0">
+            <div class="col-sm-12 d-sm-none">
+                <span class="salutation">Hey,</span>
+                <div class="text-right">
+                    <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
+                            Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
+                </div>
             </div>
-        </div>
-        <div class="offset-1 col-md-10 d-none d-md-block">
-            <span class="salutation">Hey,</span>
-            <div class="text-md-right text-sm-left">
-                <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
-                        Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
+            <div class="offset-1 col-md-10 d-none d-md-block">
+                <span class="salutation">Hey,</span>
+                <div class="text-md-right text-sm-left">
+                    <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
+                            Engineer</span> from <span class="emphasis">Pakistan</span></span>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
