--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,39 +1,47 @@
-@import '../../../styles.scss';
+@import "../../../styles.scss";
 .container-fluid {
-    height: 100vh;
+  max-width: 100%;
+  height: 100vh;
+}
+
+.hero {
+  max-width: 100%;
+  /* Background styles */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(/assets/images/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .salutation {
-    font-family: 'Raleway', sans-serif;
-    font-size: 28rem;
-    font-weight: bold;
-    color: #444444;
-    @media screen and (max-width: 500px) {
-        font-size: 10rem;
-    }
-    @media screen and (max-width: 1024px) and (min-width: 500px) {
-        font-size: 7rem;
-    }
+  font-family: "Raleway", sans-serif;
+  font-size: 28rem;
+  font-weight: bold;
+  color: #f8f8fa;
+  @media screen and (max-width: 500px) {
+    font-size: 10rem;
+  }
+  @media screen and (max-width: 1024px) and (min-width: 500px) {
+    font-size: 7rem;
+  }
 }
 
 .introduction-text {
-    font-family: 'Raleway', sans-serif;
-    @extend .heading;
-    font-size: 7.2rem;
-    color: #444444;
-    @media screen and (max-width: 500px) {
-        font-size: 2.0rem;
-    }
-    @media screen and (max-width: 1024px) and (min-width: 500px) {
-        font-size: 3rem;
-    }
+  font-weight: normal;
+  font-family: "Raleway", sans-serif;
+  @extend .heading;
+  font-size: 7.2rem;
+  color: #f8f8fa;
+  @media screen and (max-width: 500px) {
+    font-size: 2rem;
+  }
+  @media screen and (max-width: 1024px) and (min-width: 500px) {
+    font-size: 3rem;
+  }
 }
 
-.emphasis-role {
-    font-weight: bold;
-}
-
-.emphasis-place {
-    color: #28704D;
-    font-weight: bold;
+.emphasis {
+  font-weight: bold;
 }
