--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 mb-3">
+        <div class="col-12 mb-3 p-0">
             <app-greeter></app-greeter>
         </div>
-        <div class="col-12 mb-3">
+        <div class="col-12 mt-5 mb-3">
             <app-about></app-about>
         </div>
         <div class="col-12" style="margin: 10rem 0 10rem 0;">
