--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,16 +1,9 @@
 <section class="hero vw-100 vh-100 d-flex justify-content-center align-items-center">
     <div class="container-fluid">
         <div class="row h-100 align-items-center mt-5 mt-md-0">
-            <div class="col-sm-12 d-sm-none">
+            <div class="col-sm-12 offset-md-1 col-md-10">
                 <span class="salutation">Hey,</span>
                 <div class="text-right">
-                    <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
-                            Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
-                </div>
-            </div>
-            <div class="offset-1 col-md-10 d-none d-md-block">
-                <span class="salutation">Hey,</span>
-                <div class="text-md-right text-sm-left">
                     <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
                             Engineer</span> from <span class="emphasis">Pakistan</span></span>
                 </div>
