--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,37 +2,18 @@
   <div class="row">
     <div class="offset-md-3 col-md-6 offset-1 col-10 text-center">
       <div class="row">
-        <div class="col-12 mb-2">
-          <span class="heading">Want to work with me?</span>
-        </div>
-        <div class="col-12 col-md-8 mb-2 align-self-center">
-          <span class="normal-text">Hit me up on social media or checkout my Fiverr Gigs</span>
-        </div>
-        <div class="col-12 col-md-4 align-self-center">
-          <div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget'
-            style='display: inline-block;'>
-            <a itemprop='url' href="https://www.fiverr.com/shehriyarq" rel="nofollow" target="_blank"
-              style='display: inline-block;'>
-              <div class='fiverr-seller-content' id='fiverr-seller-widget-content-160e548b-9c75-4c6f-8055-0ff26daa8030'
-                itemprop='contentURL' style='display: none;'></div>
-              <div id='fiverr-widget-seller-data' style='display: none;'>
-                <div itemprop='name'>shehriyarq</div>
-                <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
-                <div itemprop='jobtitle'>Seller</div>
-                <div itemprop='description'>I'm a Full-Stack Software Engineer. I started out being a Back-End engineer
-                  but quickly picked up the pace in Front-End development as well. My work history includes some awesome
-                  achievements such as discovering and fixing major memory leaks & security vulnerabilities. One of my
-                  great achievements has been that the project I worked on at one of my day jobs won the GEC Award for
-                  Best Business Transformation Solution which I'm proud of.</div>
-              </div>
-            </a>
-          </div>
-        </div>
         <div class="col-md-12 col-sm-12 mt-5 text-center">
           <span class="heading">Stay in touch with me</span>
         </div>
         <div class="col-md-3 col-4 mt-5 mb-5" *ngFor="let social of socials">
-          <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+          <div class="row">
+            <div class="col-12">
+              <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+            </div>
+            <div class="col-12 mt-3">
+              <span style="font-size: 2rem;">{{ social.text }}</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
