--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,72 +1,71 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body,
 html {
-    height: 100%;
-    margin: 0 auto;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 62.5%;
-    background-color: #f8f8fa;
+  height: 100%;
+  margin: 0 auto;
+  font-family: "Open Sans", sans-serif;
+  font-size: 62.5%;
+  background-color: #f8f8fa;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 section {
-    width: 80%;
-    margin: 0 auto;
-    padding: 2em;
+  width: 80%;
+  margin: 0 auto;
+  padding: 2em;
 }
 
 hr {
-    height: 0.2em;
-    width: 10%;
-    background-color: black;
-    margin-bottom: 10vh;
-    margin-top: 1vh;
+  height: 0.2em;
+  width: 10%;
+  background-color: black;
+  margin-bottom: 10vh;
+  margin-top: 1vh;
 }
 
 .section-heading {
-    font-size: 3em;
-    font-weight: bold;
-    display: block;
-    margin-bottom: 1em;
-    margin-top: 1em;
+  font-size: 3em;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .content {
-    margin-top: 5vh;
+  margin-top: 5vh;
 }
 
 button {
-    text-transform: uppercase;
-    outline: 0 !important;
+  text-transform: uppercase;
+  outline: 0 !important;
 }
 
 .nopadding {
-    padding: 0 !important;
+  padding: 0 !important;
 }
 
 .heading {
-    font-family: 'Raleway', sans-serif;
-    font-size: 6.4rem;
-    color: #444444;
-    @media screen and (max-width: 500px) {
-        font-size: 3rem;
-    }
-    @media screen and (max-width: 1024px) and (min-width: 500px) {
-        font-size: 5rem;
-    }
-    font-weight: bold;
+  font-family: "Raleway", sans-serif;
+  font-size: 6.4rem;
+  color: #444444;
+  @media screen and (max-width: 500px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1024px) and (min-width: 500px) {
+    font-size: 5rem;
+  }
+  font-weight: bold;
 }
 
 .normal-text {
-    font-size: 2.4rem;
-    color: #444444;
-    @media screen and (max-width: 500px) {
-        font-size: 1.6rem;
-    }
-    @media screen and (min-width: 500px) and (max-width: 1024px) {
-        font-size: 2.0rem;
-    }
+  font-size: 2.4rem;
+  color: #444444;
+  @media screen and (max-width: 500px) {
+    font-size: 1.6rem;
+  }
+  @media screen and (min-width: 500px) and (max-width: 1024px) {
+    font-size: 2rem;
+  }
 }
