add back freelance section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,21 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 mb-3 p-0">
+        <div class="col-12 p-0 section-mrgin">
             <app-greeter></app-greeter>
         </div>
-        <div class="col-12 mt-5 mb-3">
+        <div class="col-12 section-margin">
             <app-about></app-about>
         </div>
-        <div class="col-12" style="margin: 10rem 0 10rem 0;">
+        <div class="col-12 section-mragin">
             <app-companies-worked></app-companies-worked>
         </div>
-        <div class="col-12 nopadding" style="margin-bottom: 5rem;">
+        <div class="col-12 section-margin">
+            <app-hire-me></app-hire-me>
+        </div>
+        <div class="col-12 p-0 section-margin">
             <app-contact></app-contact>
         </div>
-        <div class="col-12 nopadding mt-3">
+        <div class="col-12 p-0 section-margin">
             <app-footer></app-footer>
         </div>
     </div>
