add Freelance word in greeter heading

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -5,7 +5,8 @@
                 <span class="salutation">Hey,</span>
                 <div class="text-right">
                     <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
-                            Engineer</span> from <span class="emphasis">Pakistan</span></span>
+                            Engineer</span> and <span class="emphasis">Freelancer</span> from <span
+                            class="emphasis">Pakistan</span></span>
                 </div>
             </div>
         </div>
