--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -16,6 +16,14 @@
   background-attachment: fixed;
 }
 
+.fa {
+  color: #f8f8fa;
+  display: inline-block;
+  // border-radius: 50%;
+  // background-color: white;
+  // padding: 2rem;
+}
+
 .salutation {
   font-family: "Raleway", sans-serif;
   font-size: 28rem;
