make freelancer hyperlink in greeter

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -5,8 +5,9 @@
                 <span class="salutation">Hey,</span>
                 <div class="text-right">
                     <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
-                            Engineer</span> and <span class="emphasis">Freelancer</span> from <span
-                            class="emphasis">Pakistan</span></span>
+                            Engineer</span> and <a href="{{ getFiverrLink() }}" class="emphasis "><u>Freelancer</u></a>
+                        from
+                        <span class="emphasis">Pakistan</span></span>
                 </div>
             </div>
             <div class="col-12 align-items-end d-flex flex-wrap justify-content-center">
