--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,8 +5,8 @@
         <div class="col-md-12 col-sm-12 mt-5 text-center">
           <span class="heading">Stay in touch with me</span>
         </div>
-        <div class="col-md-3 col-12 mt-5 mb-5" *ngFor="let social of detailService.socials">
-          <div class="row">
+        <div class="card col-md-3 col-12" *ngFor="let social of detailService.socials">
+          <div class="row mt-5 mb-5">
             <div class="col-12">
               <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
             </div>
