--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,14 +1,51 @@
 .fa {
   font-size: 6rem;
   text-align: center;
+  vertical-align: middle;
+  line-height: 10rem;
+  width: 10rem;
+  height: 10rem;
   text-decoration: none;
   border-radius: 50%;
   margin: 0 0.5em 0 0.5em;
-  color: #444444;
+  color: #f8f8fa;
+  background: #444444;
   @media screen and (max-width: 500px) {
-    font-size: 3rem;
+    font-size: 4rem;
   }
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 4.5rem;
   }
+}
+
+.fa-twitter:hover {
+  background: #1da1f2;
+}
+
+.fa-youtube:hover {
+  background: #ff0000;
+}
+
+.fa-snapchat-ghost:hover {
+  background: #fffc00;
+}
+
+.fa-linkedin:hover {
+  background: #0072b1;
+}
+
+.fa-instagram:hover {
+  background: #833ab4;
+}
+
+.fa-facebook:hover {
+  background: #3b5998;
+}
+
+.fa-whatsapp:hover {
+  background: #4fce5d;
+}
+
+.fa-microphone:hover {
+  background: #8940fa;
 }
