hammer landing page a little

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -5,7 +5,7 @@
                 <span class="salutation">Hey,</span>
                 <div class="text-right">
                     <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
-                            Engineer</span> and <a href="{{ getFiverrLink() }}" class="emphasis "><u>Freelancer</u></a>
+                            Engineer</span>
                         from
                         <span class="emphasis">Pakistan</span></span>
                 </div>
