--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -7,7 +7,7 @@
   height: 10rem;
   text-decoration: none;
   border-radius: 50%;
-  margin: 0 0.5em 0 0.5em;
+  margin: 0;
   color: #f8f8fa;
   background: #444444;
   @media screen and (max-width: 500px) {
