discord buttons should look discordy

--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -68,6 +68,10 @@
   background: #8940fa;
 }
 
+.fa-users {
+  background: #738adb;
+}
+
 .salutation {
   font-family: "Raleway", sans-serif;
   font-size: 16rem;
