--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -3,10 +3,9 @@
         <div class="row h-100 align-items-end mt-5 mt-md-0">
             <div class="col-12 mb-5 pb-5">
                 <div class="col-sm-12 offset-md-1 col-md-10 mb-5">
-                    <span class="salutation">Hey,</span>
-                    <div class="text-right">
-                        <span class="introduction-text">I'm a <span class="emphasis">Self-Taught Software
-                                Engineer</span>
+                    <span class="salutation">Hello,</span>
+                    <div class="text-center">
+                        <span class="introduction-text">I'm <span class="emphasis">that Developer</span>
                             from
                             <span class="emphasis">Pakistan</span></span>
                     </div>
