--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -3,6 +3,9 @@
 .container-fluid {
   max-width: 100%;
   height: 100vh;
+  @media screen and (max-width: 500px) {
+    height: 90vh;
+  }
 }
 
 .hero {
@@ -82,6 +85,9 @@
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 7rem;
   }
+  @media screen and (max-width: 1440px) and (min-width: 1024px) {
+    font-size: 12rem;
+  }
 }
 
 .introduction-text {
@@ -95,6 +101,9 @@
   }
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 3rem;
+  }
+  @media screen and (max-width: 1440px) and (min-width: 1024px) {
+    font-size: 4rem;
   }
 }
 
