--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -4,13 +4,13 @@
             <div class="col-12 mb-5 pb-5">
                 <div class="col-sm-12 offset-md-1 col-md-10 mb-5">
                     <span class="salutation">Hello,</span>
-                    <div class="text-center">
-                        <span class="introduction-text">I'm <span class="emphasis">that Developer</span>
+                    <div class="text-left">
+                        <span class="introduction-text">I'm <span class="emphasis">that developer</span>
                             from
                             <span class="emphasis">Pakistan</span></span>
                     </div>
                 </div>
-                <div class="col-12 d-flex flex-wrap justify-content-start">
+                <div class="col-12 d-flex flex-wrap justify-content-end">
                     <div *ngFor="let social of detailService.socials" class="mt-4 mt-md-0">
                         <a href="{{ social.link }}" class="fa" [ngClass]="social.class"
                             *ngIf="shouldShowLink(social.link)"></a>
