--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 p-0">
+        <!-- <div class="col-12 p-0">
             <app-greeter></app-greeter>
         </div>
         <div class="col-12 section-margin">
@@ -14,6 +14,6 @@
         </div>
         <div class="col-12 p-0 section-margin">
             <app-footer></app-footer>
-        </div>
+        </div> -->
     </div>
 </div>
