add logo placeholder text

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,4 +1,13 @@
-<section class="hero vw-100 vh-100 d-flex justify-content-center align-items-center">
+<section class="m-0">
+    <div class="container-fluid">
+        <div class="row p-0">
+            <div class="col-12 p-0">
+                <p class="logo-placeholder">Shehriyar Qureshi</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- <section class="hero vw-100 vh-100 d-flex justify-content-center align-items-center">
     <div class="container-fluid">
         <div class="row h-100 align-items-end mt-5 mt-md-0">
             <div class="col-12 mb-5 pb-5">
@@ -19,4 +28,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
