--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
     <div class="row">
-        <!-- <div class="col-12 p-0">
+        <div class="col-12 p-0">
             <app-greeter></app-greeter>
         </div>
-        <div class="col-12 section-margin">
+        <!-- <div class="col-12 section-margin">
             <app-about></app-about>
-        </div>
-        <div class="col-12 section-margin">
+        </div> -->
+        <!-- <div class="col-12 section-margin">
             <app-companies-worked></app-companies-worked>
-        </div>
-        <div class="col-12 section-margin">
+        </div> -->
+        <!-- <div class="col-12 section-margin">
             <app-contact></app-contact>
-        </div>
-        <div class="col-12 p-0 section-margin">
+        </div> -->
+        <!-- <div class="col-12 p-0 section-margin">
             <app-footer></app-footer>
         </div> -->
     </div>
