make greeter page work somewhat

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,31 +1,21 @@
-<section class="m-0">
-    <div class="container-fluid">
-        <div class="row p-0">
-            <div class="col-12 p-0">
-                <p class="logo-placeholder">Shehriyar Qureshi</p>
-            </div>
-        </div>
+<div class="container-fluid">
+  <div class="row p-0">
+    <div class="col-md-12 p-0 pt-3 pb-5">
+      <p class="logo-placeholder">Shehriyar Qureshi</p>
     </div>
-</section>
-<!-- <section class="hero vw-100 vh-100 d-flex justify-content-center align-items-center">
-    <div class="container-fluid">
-        <div class="row h-100 align-items-end mt-5 mt-md-0">
-            <div class="col-12 mb-5 pb-5">
-                <div class="col-sm-12 offset-md-1 col-md-10 mb-5">
-                    <span class="salutation">Hello,</span>
-                    <div class="text-left">
-                        <span class="introduction-text">I'm <span class="emphasis">that developer</span>
-                            from
-                            <span class="emphasis">Pakistan</span></span>
-                    </div>
-                </div>
-                <div class="col-12 d-flex flex-wrap justify-content-end">
-                    <div *ngFor="let social of detailService.socials" class="mt-4 mt-md-0">
-                        <a href="{{ social.link }}" class="fa" [ngClass]="social.class"
-                            *ngIf="shouldShowLink(social.link)"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="col-lg-12 p-0 d-none d-lg-block">
+      <p class="tagline">
+        I create <b>digital content</b>, <b>documenting</b> my journey to
+        <b>inspire</b> and help developers <b>learn</b> from my
+        <b>experience</b>.
+      </p>
     </div>
-</section> -->
+    <div class="col-12 p-0 d-lg-none">
+      <p class="tagline-mobile">
+        I create <b>digital content</b>, <b>documenting</b> my journey to
+        <b>inspire</b> and help developers <b>learn</b> from my
+        <b>experience</b>.
+      </p>
+    </div>
+  </div>
+</div>
