--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 p-0">
+        <div class="col-12">
             <app-greeter></app-greeter>
         </div>
         <!-- <div class="col-12 section-margin">
