--- a/src/app/components/companies-worked/companies-worked.component.html
+++ b/src/app/components/companies-worked/companies-worked.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-12 text-center mb-3">
+    <div class="row p-0">
+        <div class="col-12 p-0">
             <span class="heading">Companies I've worked with</span>
         </div>
-        <div class="offset-lg-0 col-lg-2 col-4 text-center m-5 align-self-center p-3" *ngFor="let item of workService.workExperience">
+        <div class="offset-lg-0 col-lg-2 col-4 text-center align-self-center pr-3 pl-3 mr-5 ml-5 mb-5 mt-5 mt-md-0" *ngFor="let item of workService.workExperience">
             <img src="{{ item.logo }}" alt="" class="img-fluid">
         </div>
     </div>
