--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mb-5">
             <app-greeter></app-greeter>
         </div>
         <!-- <div class="col-12 section-margin">
             <app-about></app-about>
         </div> -->
-        <!-- <div class="col-12 section-margin">
+        <div class="col-12 mt-5 mb-5">
             <app-companies-worked></app-companies-worked>
-        </div> -->
+        </div>
         <!-- <div class="col-12 section-margin">
             <app-contact></app-contact>
         </div> -->
