--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -7,11 +7,13 @@
 
 .tagline {
   font-size: 6rem;
+  font-weight: 300;
 }
 
 .tagline-mobile {
   font-size: 3rem;
   line-height: 4rem;
+  font-weight: 300;
 }
 
 .hero {
