add technology section WIP

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,9 @@
         <div class="col-12 mt-5 mb-5">
             <app-companies-worked></app-companies-worked>
         </div>
+        <div class="col-12">
+            <app-technologies></app-technologies>
+        </div>
         <!-- <div class="col-12 section-margin">
             <app-contact></app-contact>
         </div> -->
