noice words about technologies I'm comfortable with

--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -4,11 +4,11 @@
       <span class="heading">Some technologies I'm comfortable with</span>
     </div>
     <div
-      class="col-lg-3 col-12 p-0"
+      class="col-lg-3 col-12 pr-3 p-0"
       *ngFor="let technology of projectService.technologies"
     >
       <p class="technology-title mb-0">{{ technology.title }}</p>
-      <p class="technology-description">{{ technology.description }}</p>
+      <p class="technology-description pr-3">{{ technology.description }}</p>
     </div>
   </div>
 </div>
