add partial contact section
add new heading but for now keep the old contact boxy box

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,22 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12 mb-5">
-            <app-greeter></app-greeter>
-        </div>
-        <!-- <div class="col-12 section-margin">
+  <div class="row">
+    <div class="col-12 mb-5">
+      <app-greeter></app-greeter>
+    </div>
+    <!-- <div class="col-12 section-margin">
             <app-about></app-about>
         </div> -->
-        <div class="col-12 mt-5 mb-5">
-            <app-companies-worked></app-companies-worked>
-        </div>
-        <div class="col-12">
-            <app-technologies></app-technologies>
-        </div>
-        <!-- <div class="col-12 section-margin">
-            <app-contact></app-contact>
-        </div> -->
-        <!-- <div class="col-12 p-0 section-margin">
+    <div class="col-12 mt-5 mb-5">
+      <app-companies-worked></app-companies-worked>
+    </div>
+    <div class="col-12 mb-5 mt-5">
+      <app-technologies></app-technologies>
+    </div>
+    <div class="col-12 mb-5 mt-5">
+      <app-contact></app-contact>
+    </div>
+    <!-- <div class="col-12 p-0 section-margin">
             <app-footer></app-footer>
         </div> -->
-    </div>
+  </div>
 </div>
