--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,14 +1,21 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-12 col-sm-12 p-0 mb-5">
+      <span class="heading">Internet Presence</span>
+    </div>
     <div class="offset-md-1 col-md-10 offset-1 col-10 text-center">
       <div class="row">
-        <div class="col-md-12 col-sm-12 mt-5 text-center">
-          <span class="heading">Stay in touch with me</span>
-        </div>
-        <div class="card col-md-3 col-12" *ngFor="let social of detailService.socials">
+        <div
+          class="card col-md-3 col-12"
+          *ngFor="let social of detailService.socials"
+        >
           <div class="row mt-5 mb-5">
             <div class="col-12">
-              <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+              <a
+                href="{{ social.link }}"
+                class="fa"
+                [ngClass]="social.class"
+              ></a>
             </div>
             <div class="col-12 mt-3">
               <span style="font-size: 2rem;">{{ social.text }}</span>
