--- a/src/app/components/companies-worked/companies-worked.component.html
+++ b/src/app/components/companies-worked/companies-worked.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row p-0">
     <div class="col-12 p-0">
       <span class="heading">Companies I've worked with</span>
@@ -10,6 +10,21 @@
       *ngFor="let item of workService.workExperience"
     >
       <img src="{{ item.logo }}" alt="" class="img-fluid" style="width: 50%"/>
+    </div>
+  </div>
+</div> -->
+
+<div class="container-fluid">
+  <div class="row p-0">
+    <div class="col-12 p-0 mb-5">
+      <span class="heading">Companies I've worked with</span>
+    </div>
+    <div
+      class="col-lg-3 col-12 pr-3 p-0"
+      *ngFor="let company of workService.workExperience"
+    >
+      <p class="company-title mb-0">{{ company.name }}</p>
+      <p class="company-description pr-3">{{ company.description }}</p>
     </div>
   </div>
 </div>
