--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row p-0">
     <div class="col-md-12 p-0 pt-3 pb-5">
-      <p class="logo-placeholder">Shehriyar Qureshi</p>
+      <!-- Logo and Navigation here -->
     </div>
     <div class="col-lg-12 p-0 d-none d-lg-block">
       <p class="tagline">
