--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -11,7 +11,10 @@
   color: #f8f8fa;
   background: #444444;
   @media screen and (max-width: 500px) {
-    font-size: 4rem;
+    font-size: 2rem;
+  line-height: 4rem;
+  width: 4rem;
+  height: 4rem;
   }
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 4.5rem;
