--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,17 +5,10 @@
     </div>
     <div class="offset-md-1 col-md-10 offset-1 col-10 text-center">
       <div class="row">
-        <div
-          class="card col-md-3 col-6"
-          *ngFor="let social of detailService.socials"
-        >
+        <div class="card col-md-3 col-6" *ngFor="let social of detailService.socials">
           <div class="row mt-md-5 mb-md-5 mt-2 mb-2">
             <div class="col-12">
-              <a
-                href="{{ social.link }}"
-                class="fa"
-                [ngClass]="social.class"
-              ></a>
+              <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
             </div>
             <div class="col-12 mt-2">
               <span style="font-size: 1.5rem;">{{ social.text }}</span>
