--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -5,16 +5,14 @@
     </div>
     <div class="col-lg-12 p-0 d-none d-lg-block">
       <p class="tagline">
-        I create <b>digital content</b>, <b>documenting</b> my journey to
-        <b>inspire</b> and help developers <b>learn</b> from my
-        <b>experience</b>.
+        I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
+        <b>learn</b> from my <b>experience</b>.
       </p>
     </div>
     <div class="col-12 p-0 d-lg-none">
       <p class="tagline-mobile">
-        I create <b>digital content</b>, <b>documenting</b> my journey to
-        <b>inspire</b> and help developers <b>learn</b> from my
-        <b>experience</b>.
+        I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
+        <b>learn</b> from my <b>experience</b>.
       </p>
     </div>
   </div>
