--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,9 +1,4 @@
-@import "../../../styles.scss";
-
-.logo-placeholder {
-  font-size: 3rem;
-  font-weight: bold;
-}
+@import '../../../styles.scss';
 
 .tagline {
   font-size: 6rem;
@@ -14,107 +9,4 @@
   font-size: 3rem;
   line-height: 4rem;
   font-weight: 300;
-}
-
-.hero {
-  max-width: 100%;
-  /* Background styles */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)),
-    url(/assets/images/hero.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.fa {
-  font-size: 3rem;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 6rem;
-  width: 6rem;
-  height: 6rem;
-  text-decoration: none;
-  border-radius: 50%;
-  margin: 0 0.5em 0 0.5em;
-  color: #f8f8fa;
-  background: #444444;
-  @media screen and (max-width: 500px) {
-    font-size: 2rem;
-    line-height: 4rem;
-    width: 4rem;
-    height: 4rem;
-  }
-}
-
-.fa-twitter {
-  background: #1da1f2;
-}
-
-.fa-youtube {
-  background: #ff0000;
-}
-
-.fa-snapchat-ghost {
-  background: #fffc00;
-}
-
-.fa-linkedin {
-  background: #0072b1;
-}
-
-.fa-instagram {
-  background: #833ab4;
-}
-
-.fa-facebook {
-  background: #3b5998;
-}
-
-.fa-whatsapp {
-  background: #4fce5d;
-}
-
-.fa-microphone {
-  background: #8940fa;
-}
-
-.fa-users {
-  background: #738adb;
-}
-
-.salutation {
-  font-family: "Raleway", sans-serif;
-  font-size: 16rem;
-  color: #f8f8fa;
-  @media screen and (max-width: 500px) {
-    font-size: 10rem;
-  }
-  @media screen and (max-width: 1024px) and (min-width: 500px) {
-    font-size: 7rem;
-  }
-  @media screen and (max-width: 1440px) and (min-width: 1024px) {
-    font-size: 12rem;
-  }
-}
-
-.introduction-text {
-  font-weight: normal;
-  font-family: "Raleway", sans-serif;
-  @extend .heading;
-  font-size: 7.2rem;
-  color: #f8f8fa;
-  @media screen and (max-width: 500px) {
-    font-size: 2rem;
-  }
-  @media screen and (max-width: 1024px) and (min-width: 500px) {
-    font-size: 3rem;
-  }
-  @media screen and (max-width: 1440px) and (min-width: 1024px) {
-    font-size: 4rem;
-  }
-}
-
-.emphasis {
-  font-weight: bold;
 }
