--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -3,10 +3,7 @@
     <div class="col-12 p-0 mb-5">
       <span class="heading">Some technologies I'm comfortable with</span>
     </div>
-    <div
-      class="col-lg-3 col-12 pr-3 p-0"
-      *ngFor="let technology of projectService.technologies"
-    >
+    <div class="col-lg-3 col-12 pr-3 p-0" *ngFor="let technology of projectService.technologies">
       <p class="technology-title mb-0">{{ technology.title }}</p>
       <p class="technology-description pr-3">{{ technology.description }}</p>
     </div>
