--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,56 +2,8 @@ body,
 html {
   height: 100%;
   margin: 0 auto;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
-  background-color: #f8f8fa;
-}
-
-.section-margin {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-.fa {
-  font-size: 6rem;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  margin: 0 0.5em 0 0.5em;
-  color: #444444;
-  @media screen and (max-width: 500px) {
-    font-size: 3rem;
-  }
-  @media screen and (max-width: 1024px) and (min-width: 500px) {
-    font-size: 4.5rem;
-  }
-}
-
-section {
-  width: 80%;
-  margin: 0 auto;
-  padding: 2em;
-}
-
-hr {
-  height: 0.2em;
-  width: 10%;
-  background-color: black;
-  margin-bottom: 10vh;
-  margin-top: 1vh;
-}
-
-.content {
-  margin-top: 5vh;
-}
-
-button {
-  text-transform: uppercase;
-  outline: 0 !important;
 }
 
 .heading {
@@ -63,15 +15,4 @@ button {
     font-size: 5rem;
   }
   font-weight: bold;
-}
-
-.normal-text {
-  font-size: 2.4rem;
-  color: #444444;
-  @media screen and (max-width: 500px) {
-    font-size: 1.6rem;
-  }
-  @media screen and (min-width: 500px) and (max-width: 1024px) {
-    font-size: 2rem;
-  }
 }
