--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,4 +1,5 @@
 .fa {
+  font-display: swap;
   font-size: 3rem;
   text-align: center;
   vertical-align: middle;
@@ -12,9 +13,9 @@
   background: #444444;
   @media screen and (max-width: 500px) {
     font-size: 2rem;
-  line-height: 4rem;
-  width: 4rem;
-  height: 4rem;
+    line-height: 4rem;
+    width: 4rem;
+    height: 4rem;
   }
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 4.5rem;
