remove secondary mobile tagline

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -3,14 +3,8 @@
     <div class="col-md-12 p-0 pt-3 pb-5">
       <!-- Logo and Navigation here -->
     </div>
-    <div class="col-lg-12 p-0 d-none d-lg-block">
+    <div class="col-12 p-0">
       <p class="tagline">
-        I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
-        <b>learn</b> from my <b>experience</b>.
-      </p>
-    </div>
-    <div class="col-12 p-0 d-lg-none">
-      <p class="tagline-mobile">
         I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
         <b>learn</b> from my <b>experience</b>.
       </p>
