--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,10 +8,12 @@
         <div class="card col-md-3 col-6" *ngFor="let social of detailService.socials">
           <div class="row mt-md-5 mb-md-5 mt-2 mb-2">
             <div class="col-12">
-              <a href="{{ social.link }}" class="fa" [ngClass]="social.class"></a>
+              <a href="{{ social.link }}" class="fa">
+                <fa-icon [icon]="social.icon"> </fa-icon>
+              </a>
             </div>
             <div class="col-12 mt-2">
-              <span style="font-size: 1.5rem;">{{ social.text }}</span>
+              <span style="font-size: 1.5rem">{{ social.text }}</span>
             </div>
           </div>
         </div>
