--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,11 +1,3 @@
-.fa {
-  font-size: 2rem;
-  line-height: 6rem;
-  border-radius: 50%;
-  color: #f8f8fa;
-  background: #444444;
-  padding: 2rem;
-  @media screen and (max-width: 1024px) and (min-width: 500px) {
-    font-size: 2rem;
-  }
+a {
+  color: black;
 }
