add some main tags and use heading tags

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -4,10 +4,10 @@
       <!-- Logo and Navigation here -->
     </div>
     <div class="col-12 p-0">
-      <p class="tagline">
+      <h1 class="tagline">
         I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
         <b>learn</b> from my <b>experience</b>.
-      </p>
+      </h1>
     </div>
   </div>
 </div>
