--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row p-0">
     <div class="col-12 p-0 mb-5">
-      <span class="heading">Some technologies I'm comfortable with</span>
+      <h2 class="heading">Some technologies I'm comfortable with</h2>
     </div>
     <div class="col-lg-3 col-12 pr-3 p-0" *ngFor="let technology of projectService.technologies">
-      <p class="technology-title mb-0">{{ technology.title }}</p>
+      <h3 class="technology-title mb-0">{{ technology.title }}</h3>
       <p class="technology-description pr-3">{{ technology.description }}</p>
     </div>
   </div>
