--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,18 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 mb-5">
-      <app-greeter></app-greeter>
-    </div>
-    <div class="col-12 mb-5 mt-5">
-      <app-technologies></app-technologies>
-    </div>
-    <div class="col-12 mt-5 mb-5">
-      <app-companies-worked></app-companies-worked>
-    </div>
-    <div class="col-12 mb-5 mt-5">
-      <app-contact></app-contact>
-    </div>
+    <main id="about-myself">
+      <div class="col-12 mb-5">
+        <app-greeter></app-greeter>
+      </div>
+      <div class="col-12 mb-5 mt-5">
+        <app-technologies></app-technologies>
+      </div>
+      <div class="col-12 mt-5 mb-5">
+        <app-companies-worked></app-companies-worked>
+      </div>
+      <div class="col-12 mb-5 mt-5">
+        <app-contact></app-contact>
+      </div>
+    </main>
   </div>
 </div>
