--- a/src/app/components/companies-worked/companies-worked.component.html
+++ b/src/app/components/companies-worked/companies-worked.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row p-0">
     <div class="col-12 p-0 mb-5">
-      <span class="heading">Companies I've worked with</span>
+      <h2 class="heading">Companies I've worked with</h2>
     </div>
     <div class="col-lg-3 col-12 pr-3 p-0" *ngFor="let company of workService.workExperience">
-      <p class="company-title mb-0">{{ company.name }}</p>
+      <h3 class="company-title mb-0">{{ company.name }}</h3>
       <p class="company-description pr-3">{{ company.description }}</p>
     </div>
   </div>
