--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-sm-12 p-0 mb-5">
-      <span class="heading">Internet Presence</span>
+      <h2 class="heading">Internet Presence</h2>
     </div>
     <div class="offset-md-1 col-md-10 offset-1 col-10 text-center">
       <div class="row">
