--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,9 +1,13 @@
 .tagline {
   font-size: 6rem;
-  font-weight: 300;
+  font-weight: 150;
   @media screen and (max-width: 500px) {
     font-size: 3rem;
     line-height: 4rem;
-    font-weight: 300;
+    font-weight: 200;
   }
+}
+
+b {
+  font-weight: 300;
 }
