--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 .heading {
   font-size: 3rem;
+  font-weight: 300;
   @media screen and (max-width: 500px) {
     font-size: 3rem;
   }
   @media screen and (max-width: 1024px) and (min-width: 500px) {
     font-size: 5rem;
   }
-  font-weight: bold;
 }
