--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12 p-0 pt-3 pb-5">
       <!-- Logo and Navigation here -->
     </div>
-    <div class="col-12 p-0">
+    <div class="col-12 p-0 mb-5 mt-5">
       <h1 class="tagline">
         I create <b>digital content</b>, <b>documenting</b> my journey to <b>inspire</b> and help developers
         <b>learn</b> from my <b>experience</b>.
