combine duplicate css classes into one

--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -4,8 +4,8 @@
       <h2 class="heading">Some technologies I'm comfortable with</h2>
     </div>
     <div class="col-lg-3 col-12 pr-3 p-0" *ngFor="let technology of projectService.technologies">
-      <h3 class="technology-title mb-0">{{ technology.title }}</h3>
-      <p class="technology-description pr-3">{{ technology.description }}</p>
+      <h3 class="title mb-0">{{ technology.title }}</h3>
+      <p class="description pr-3">{{ technology.description }}</p>
     </div>
   </div>
 </div>
