--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,12 @@
     font-size: 5rem;
   }
 }
+
+.title {
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+.description {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
