--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,9 @@
       <div class="col-12 mb-5 mt-5">
         <app-contact></app-contact>
       </div>
+      <div class="col-12 mt-5">
+        <app-footer></app-footer>
+      </div>
     </main>
   </div>
 </div>
